--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-  @apply bg-bg_dark text-text_light
+/* BROWSER STYLES */
 
+html {
+  --scrool-behavior: smooth !important;
+  scroll-behavior: smooth !important;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #0756cd;
+  height: 10px;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f4f4f4;
+}
+
+::selection {
+  color: #f4f4f4;
+  background-color: #21242b;
 }
 
 /* COMMON STYLES */
@@ -17,11 +37,19 @@ body{
 }
 
 /* typography */
-
-h1{
-  @apply text-6xl font-bold uppercase
+.eq {
+  transition: 500ms cubic-bezier(0.25, 1, 0.5, 1);
 }
-p{
-  @apply text-text_light/40
+h1 {
+  @apply text-5xl font-bold leading-[3.5rem];
+}
+h2 {
+  @apply text-2xl font-semibold;
+}
+h3 {
+  @apply text-xl font-medium;
 }
 
+p {
+  @apply text-text_light/40;
+}
