--- a/app/globals.css
+++ b/app/globals.css
@@ -29,7 +29,7 @@ html {
 
 /* COMMON STYLES */
 .wrapper {
-  @apply container mx-auto px-5 md:px-0;
+  @apply container mx-auto p-['2rem'];
 }
 
 .sp {
@@ -43,7 +43,7 @@ html {
   transition: 500ms cubic-bezier(0.25, 1, 0.5, 1) !important;
 }
 h1 {
-  @apply text-6xl font-bold leading-[3.8rem] w-full tracking-wider;
+  @apply lg:text-6xl text-2xl font-bold leading-[3.8rem] lg:w-full w-[17rem] tracking-wider;
 }
 h2 {
   @apply text-2xl font-semibold;
@@ -65,7 +65,7 @@ p {
 }
 
 .mobile-navber-icon[name="close-outline"] {
-  @apply hidden max-lg:text-xl max-lg:text-black ;
+  @apply hidden max-lg:text-xl max-lg:text-light ;
 }
 
 
