--- a/app/globals.css
+++ b/app/globals.css
@@ -43,7 +43,7 @@ html {
   transition: 500ms cubic-bezier(0.25, 1, 0.5, 1) !important;
 }
 h1 {
-  @apply lg:text-6xl text-2xl font-bold leading-[3.8rem] lg:w-full w-[17rem] tracking-wider;
+  @apply lg:text-6xl text-2xl font-bold lg:leading-[4.3rem] lg:w-full w-[17rem] tracking-wider;
 }
 h2 {
   @apply text-2xl font-semibold;
@@ -53,7 +53,7 @@ h3 {
 }
 
 p {
-  @apply text-light/60;
+  @apply text-light/60 lg:text-xl;
 }
 
 .mobile-navber-btn {
